--- a/Index.html
+++ b/Index.html
@@ -10,6 +10,6 @@
 </head>
 <body ng-init="numofBooks=10">
 	<input type="text" ng-model="numofBooks" />
-	<p>Welcome to BooKarts, we have collection of {{numofBooks + ' Million'}} books.</p>
+	<p>Welcome to BooKarts, we have collection of {{numofBooks + ' Million'}} books and magazines.</p>
 </body>
 </html>
